--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vertical Navbar</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="mediaindex.css">
 
 <!-- pagin css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.6.0/pagination.min.css" integrity="sha512-K1k7jSn9RDKEcn/ugqVVvWYu0bcS3q1w6m/5pQSnrj0bCfIqF6Wk49lkmckSb4wglvTP9V17LtS0q0XxYccXbg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,7 +20,7 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Dashboard</a></li>
+            <li><a href="./admin.html">Dashboard</a></li>
             <li><a href="#">Login</a></li>
             <li><a href="#">Help</a></li>
             <li><a href="#">About</a></li>
