--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vertical Navbar</title>
+    <title>My Doctor</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="mediaindex.css">
