--- a/userform.html
+++ b/userform.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User Form</title>
     <link rel="stylesheet" href="userform.css">
 </head>
 <body id="userFormBody" onload="appoint()">
